versioned_docs/version-0.13/capabilities/server/triggers.mdx
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

# Triggers

Triggers allow your app to automatically respond to specific events or actions within a Reddit community. Use triggers to build automation, moderation, and engagement features that react to user or moderator activity.

## What are triggers?

A trigger is an action you can build into your app that will occur automatically when a specified condition is met. For example, you can set up a trigger to respond when a new post is submitted, a comment is created, or a moderator takes action.

## Supported trigger types

Event triggers let your app automatically respond to a user's or moderator's action. The following trigger types are supported:

- `onPostSubmit`
- `onPostCreate`
- `onPostUpdate`
- `onPostReport`
- `onPostDelete`
- `onPostFlairUpdate`
- `onCommentCreate`
- `onCommentDelete`
- `onCommentReport`
- `onCommentSubmit`
- `onCommentUpdate`
- `onPostNsfwUpdate`
- `onPostSpoilerUpdate`
- `onAppInstall`
- `onAppUpgrade`
- `onModActions`
- `onModMail`
- `onAutomoderatorFilterPost`
- `onAutomoderatorFilterComment`

A full list of events and their payloads can be found in the [EventTypes documentation](../../api/public-api/@devvit/namespaces/EventTypes/). For more details on Mod specific actions, see [ModActions](../../api/redditapi/models/interfaces/ModAction) and [ModMail](../../api/public-api/type-aliases/ModMailDefinition).

## Setting up triggers

### 1. Add triggers and endpoints to `devvit.json`

<Tabs>
  <TabItem value="web" label="Devvit Web">
  Declare the triggers and their corresponding endpoints in your `devvit.json`:

```json
"triggers": {
  "onAppUpgrade": "/internal/on-app-upgrade",
  "onCommentCreate": "/internal/on-comment-create",
  "onPostSubmit": "/internal/on-post-submit"
}
```

  </TabItem>
  <TabItem value="blocks" label="Devvit Blocks / Mod Tools">
  Declare the triggers in your `devvit.json`:

```json
{
  "name": "your-app-name",
  "blocks": {
    "entry": "src/main.tsx",
    "triggers": ["onPostCreate"]
  }
}
```

  </TabItem>
</Tabs>

### 2. Handle trigger events in your server logic

<Tabs>
  <TabItem value="web" label="Devvit Web">
  Listen for the events in your server and access the data passed into the request:

<Tabs
  variant="pill"
  groupId="http-server-framework"
  defaultValue="hono"
  values={[
    { label: 'Hono', value: 'hono' },
    { label: 'Express', value: 'express' },
  ]}>
<TabItem value="hono">

```tsx title="server/index.ts"
import type {
  OnAppUpgradeRequest,
  OnCommentCreateRequest,
  OnPostSubmitRequest,
  TriggerResponse,
} from '@devvit/web/shared';

app.post('/internal/on-app-upgrade', async (c) => {
  console.log('Handle event for on-app-upgrade!');
  const input = await c.req.json<OnAppUpgradeRequest>();
  const installer = input.installer;
  console.log('Installer:', JSON.stringify(installer, null, 2));
  return c.json<TriggerResponse>({ status: 'ok' });
});

app.post('/internal/on-comment-create', async (c) => {
  console.log('Handle event for on-comment-create!');
  const input = await c.req.json<OnCommentCreateRequest>();
  const comment = input.comment;
  const author = input.author;
  console.log('Comment:', JSON.stringify(comment, null, 2));
  console.log('Author:', JSON.stringify(author, null, 2));
  return c.json<TriggerResponse>({ status: 'ok' });
});

app.post('/internal/on-post-submit', async (c) => {
  console.log('Handle event for on-post-submit!');
  const input = await c.req.json<OnPostSubmitRequest>();
  const post = input.post;
  const author = input.author;
  console.log('Post:', JSON.stringify(post, null, 2));
  console.log('Author:', JSON.stringify(author, null, 2));
  return c.json<TriggerResponse>({ status: 'ok' });
});
```

</TabItem>
<TabItem value="express">

```tsx title="server/index.ts"
import type {
  OnAppUpgradeRequest,
  OnCommentCreateRequest,
  OnPostSubmitRequest,
  TriggerResponse,
} from '@devvit/web/shared';

const router = express.Router();

// ..

router.post<string, never, TriggerResponse, OnAppUpgradeRequest>(
  "/internal/on-app-upgrade",
  async (req, res) => {
  console.log(`Handle event for on-app-upgrade!`);
  const installer = req.body.installer;
  console.log("Installer:", JSON.stringify(installer, null, 2));
  res.status(200).json({ status: "ok" });
});

router.post<string, never, TriggerResponse, OnCommentCreateRequest>(
  "/internal/on-comment-create",
  async (req, res) => {
  console.log(`Handle event for on-comment-create!`);
  const comment = req.body.comment;
  const author = req.body.author;
  console.log("Comment:", JSON.stringify(comment, null, 2));
  console.log("Author:", JSON.stringify(author, null, 2));
  res.status(200).json({ status: "ok" });
});

router.post<string, never, TriggerResponse, OnPostSubmitRequest>(
  "/internal/on-post-submit",
  async (req, res) => {
  console.log(`Handle event for on-post-submit!`);
  const post = req.body.post;
  const author = req.body.author;
  console.log("Post:", JSON.stringify(post, null, 2));
  console.log("Author:", JSON.stringify(author, null, 2));
  res.status(200).json({ status: "ok" });
});
```

</TabItem>
</Tabs>

  </TabItem>
  <TabItem value="blocks" label="Devvit Blocks / Mod Tools">
  Handle trigger events in your main file. Example (`src/main.tsx`):

```tsx
import { Devvit } from "@devvit/public-api";

// Handling a PostSubmit event
Devvit.addTrigger({
  event: "PostSubmit", // Event name from above
  onEvent: async (event) => {
    console.log(`Received OnPostSubmit event:\n${JSON.stringify(event)}`);
  },
});

// Handling multiple events: PostUpdate and PostReport
Devvit.addTrigger({
  events: ["PostUpdate", "PostReport"], // An array of events
  onEvent: async (event) => {
    if (event.type == "PostUpdate") {
      console.log(`Received OnPostUpdate event:\n${JSON.stringify(request)}`);
    } else if (event.type === "PostReport") {
      console.log(`Received OnPostReport event:\n${JSON.stringify(request)}`);
    }
  },
});

export default Devvit;
```

  </TabItem>
</Tabs>

## Best practices

- Avoid creating recursive triggers that could cause infinite loops or crashes (for example, a comment trigger that creates a comment).
- Always check the event payload to ensure your app is not the source of the event before taking action.
- Review the [EventTypes documentation](../../api/public-api/@devvit/namespaces/EventTypes/) for details on event payloads.
